Fixed menu icon spacing

--- a/src/app/component/shared/menu/external-link/external-link.component.scss
+++ b/src/app/component/shared/menu/external-link/external-link.component.scss
@@ -1,9 +1,11 @@
 a {
   padding: 0.5rem 0.25rem 0.5rem 0.75rem;
 }
+
 .icon {
   display: inline-flex;
   justify-content: center;
+  width: 1.3rem;
 
   fa-icon {
     color: black;
